// Proto for Firebase Remote Config Clientside Metrics
// go/rc-metrics-dd
package com.google.firebase.remoteconfig.proto;

option java_package = "com.google.firebase.remoteconfig.proto";
option java_outer_classname = "ClientMetrics";

// Single unit of metrics data collected from Firebase integrated apps using the
// Remote Config SDK.
// Every clientside metrics related event that is logged will correspond to
// this object.
message ClientLogEvent {
  enum EventType {
    FETCH = 0;
    ACTIVATE = 1;
  }

  // Identifier for the application that has been registered with Firebase.
  // The identifier includes the corresponding Google Cloud project number and
  // platform.
  required string app_id = 1;

  // The namespace of values being fetched from Remote Config. Used to
  // differentiate between third-party and first-party apps.
  required string namespace = 2;

  // The Firebase Installation ID, which is used to identify an instance of
  // Firebase for metric aggregation purposes.
  required string fid = 3;

  // The timestamp in milliseconds since epoch when the log was
  // recorded.
  required int64 timestamp = 4;

  // The Remote Config client-side event that the metrics are being logged for.
  required EventType event_type = 5;

  // The Firebase Remote Config SDK version.
  optional string sdk_version = 6;

  // A group of metrics about a fetch call to Firebase Remote Config.
  optional FetchEvent fetch_event = 7;
}

message FetchEvent {
  // This is the duration of time in milliseconds that it takes within the Fetch
  // event to send an HTTP request to the backend and receive a response
  optional int64 network_latency = 1;
}
